--- a/BLE Mission-Center/BLE Mission-Center/Base.lproj/Main.storyboard
+++ b/BLE Mission-Center/BLE Mission-Center/Base.lproj/Main.storyboard
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C47a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dWR-Za-9Ps">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dWR-Za-9Ps">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
+        <!--Att-->
+        <scene sceneID="nb9-i6-Sia">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Att" id="032-Wz-jzI" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="hJM-P6-aFe"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NhD-ej-eXc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="928.5" y="-35"/>
+        </scene>
         <!--Camera-->
         <scene sceneID="Qzy-Uz-1IY">
             <objects>
@@ -92,35 +102,6 @@
             </objects>
             <point key="canvasLocation" x="1010" y="497"/>
         </scene>
-        <!--Propulsion-->
-        <scene sceneID="CjT-ko-yAS">
-            <objects>
-                <viewController id="RgO-Ae-Oyo" customClass="ViewController" customModule="BLE_Mission_Center" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="5Y5-pT-JBJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="GD3-Tj-gAY"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="sif-ua-Dpe">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2qh-qb-RdS">
-                                <rect key="frame" x="30" y="40" width="240" height="128"/>
-                                <animations/>
-                            </imageView>
-                        </subviews>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Propulsion" id="Y10-nE-31v"/>
-                    <connections>
-                        <outlet property="image" destination="2qh-qb-RdS" id="pdo-cr-lhb"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9lR-E3-AVW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1010" y="-164"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="sbA-i6-963">
             <objects>
@@ -132,8 +113,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="RgO-Ae-Oyo" kind="relationship" relationship="viewControllers" id="mfU-aq-vs8"/>
                         <segue destination="NqA-rq-7ji" kind="relationship" relationship="viewControllers" id="TIT-8I-b24"/>
+                        <segue destination="032-Wz-jzI" kind="relationship" relationship="viewControllers" id="Ins-uR-cel"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wgA-G2-0t2" userLabel="First Responder" sceneMemberID="firstResponder"/>
