--- a/BLE Mission-Center/BLE Mission-Center/Base.lproj/Main.storyboard
+++ b/BLE Mission-Center/BLE Mission-Center/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dWR-Za-9Ps">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C47a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dWR-Za-9Ps">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
         <!--Att-->
@@ -69,9 +69,12 @@
                                     <action selector="takePicture:" destination="NqA-rq-7ji" eventType="touchUpInside" id="foL-g4-cX8"/>
                                 </connections>
                             </button>
-                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="zIu-l0-DBC">
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="4" translatesAutoresizingMaskIntoConstraints="NO" id="zIu-l0-DBC">
                                 <rect key="frame" x="206" y="322" width="94" height="29"/>
                                 <animations/>
+                                <connections>
+                                    <action selector="changeCompressRatio:" destination="NqA-rq-7ji" eventType="valueChanged" id="uvX-LV-n6k"/>
+                                </connections>
                             </stepper>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="36%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5P1-fH-8o5">
                                 <rect key="frame" x="165" y="326" width="33" height="21"/>
@@ -96,6 +99,8 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="cameraPhotoView" destination="RhV-DK-qjP" id="JAP-wf-LPF"/>
+                        <outlet property="compressRatioLabel" destination="5P1-fH-8o5" id="bAF-sv-eUw"/>
+                        <outlet property="compressionRatioStepper" destination="zIu-l0-DBC" id="6cH-N8-OCl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UZO-vo-rIc" userLabel="First Responder" sceneMemberID="firstResponder"/>
