--- a/BLE Mission-Center/BLE Mission-Center/Base.lproj/Main.storyboard
+++ b/BLE Mission-Center/BLE Mission-Center/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
                                     <segment title="320x240"/>
                                     <segment title="640x480"/>
                                 </segments>
+                                <connections>
+                                    <action selector="setResulotion:" destination="NqA-rq-7ji" eventType="valueChanged" id="ToY-Ma-ds4"/>
+                                </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Compression ratio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cuh-rb-Bii">
                                 <rect key="frame" x="20" y="326" width="127" height="21"/>
@@ -50,9 +53,12 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a2y-hs-cPc">
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="a2y-hs-cPc">
                                 <rect key="frame" x="251" y="359" width="51" height="31"/>
                                 <animations/>
+                                <connections>
+                                    <action selector="enterPowerSaving:" destination="NqA-rq-7ji" eventType="valueChanged" id="xRb-Ee-Mzl"/>
+                                </connections>
                             </switch>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Power Saving" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3pz-KD-gyk">
                                 <rect key="frame" x="20" y="364" width="127" height="21"/>
@@ -76,7 +82,7 @@
                                     <action selector="changeCompressRatio:" destination="NqA-rq-7ji" eventType="valueChanged" id="uvX-LV-n6k"/>
                                 </connections>
                             </stepper>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="36%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5P1-fH-8o5">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5P1-fH-8o5">
                                 <rect key="frame" x="165" y="326" width="33" height="21"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
